@@ -8,11 +8,11 @@ extern "C" {
 #include <stdint.h>
 
 // "1111111111111111111111111111111111111111111111111111111111111111"
-#define KERNAUX_UTOA_BUFFER_SIZE (64 + 1)
+#define KERNAUX_UTOA_MIN_BUFFER_SIZE (64 + 1)
 
 // "111111111111111111111111111111111111111111111111111111111111111"
 // "-1000000000000000000000000000000000000000000000000000000000000000"
-#define KERNAUX_ITOA_BUFFER_SIZE (65 + 1)
+#define KERNAUX_ITOA_MIN_BUFFER_SIZE (65 + 1)
 
 // "18446744073709551615"
 #define KERNAUX_UTOA10_BUFFER_SIZE (20 + 1)
