@@ -2,6 +2,9 @@
 
 	* include/kernaux/ntoa.h: Functions "kernaux_utoa" and "kernaux_itoa"
 	receive prefix
+	* include/kernaux/ntoa.h: Constant "KERNAUX_UTOA_BUFFER_SIZE" renamed to
+	"KERNAUX_UTOA_MIN_BUFFER_SIZE", "KERNAUX_ITOA_BUFFER_SIZE" to
+	"KERNAUX_ITOA_MIN_BUFFER_SIZE"
 
 2022-05-28  Alex Kotov  <kotovalexarian@gmail.com>
 
